--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "uuid": "^11.0.2",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
