--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "nanoid": "^5.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "uuid": "^11.0.2",
     "zustand": "^5.0.1"
