--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
+    "@hookform/resolvers": "^3.9.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.28",
@@ -28,6 +29,7 @@
     "nanoid": "^5.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
